--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -371,6 +371,23 @@ a[href="http://www.amcharts.com/javascript-charts/"] {
 .cp-spinner{width:48px;height:48px;display:inline-block;box-sizing:border-box;position:relative;top: 50%;transform: translateY(-50%);}
 .cp-round:before{border-radius:50%;content:" ";width:48px;height:48px;display:inline-block;box-sizing:border-box;border-top:solid 6px #fff;border-right:solid 6px #fff;border-bottom:solid 6px #fff;border-left:solid 6px #fff;position:absolute;top:0;left:0}.cp-round:after{border-radius:50%;content:" ";width:48px;height:48px;display:inline-block;box-sizing:border-box;border-top:solid 6px #009DAD;border-right:solid 6px transparent;border-bottom:solid 6px transparent;border-left:solid 6px transparent;position:absolute;top:0;left:0;animation:cp-round-animate 1s ease-in-out infinite}@keyframes cp-round-animate{0%{transform:rotate(0)}100%{transform:rotate(360deg)}}
 
+.fancyGraphsTitle{
+    min-height: 10em;
+    display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+}
+.fancyGraphsTitleText{
+	display: inline-block;
+}
+.fancyGraphsTitleDropdown{
+	display: inline-block;
+	font-size: 26px;
+	font-weight: bold;
+	margin-left: 5px;
+	margin-right: 5px;
+}
+
 .input-element-small {
 	float: left;
 	max-width: 700px;
